--- a/index.html
+++ b/index.html
@@ -3,12 +3,78 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Link Google Fonts here -->
+	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+
+	<!-- Link all the css file here -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/all.css">
+	<link rel="stylesheet" href="css/fontawesome-all.min.css">
 	<title>StartUP Technologies</title>
     <!-- link google fonts here -->
     <!-- link all the css here -->
 </head>
 <body>
+	<nav class="navbar navbar-inverse">
+	  <div class="container">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">StartUP</a>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+	      <ul class="nav navbar-nav navbar-right">
+	        <li><a href="#">Link</a></li>
+	      </ul>
+				-->
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
+	<div class="jumbotron">
+	  <div class="container">
+			<div class="row">
+			  <div class="col-md-5">
+					<h2>
+						Our community i currently under construction, come back soon.
+					</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+				</div>
+				<div class="col-md-7">
+					<img src="img\construction.png" alt="" class="img-responsive">
+			  </div>
+			</div>
+	  </div>
+	</div>
+
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-md-offset-8">
+					<h4>Follow us on social media</h4>
+				</div>
+				<div></div>
+			</div>
+		</div>
+	</section>
 
     <!-- link all the scripts here -->
+		<script type="js\bootstrap.min.js"></script>
+		<script type="js\bootstrap.min.js"></script>
 </body>
 </html>
