--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 	<!-- Link all the css file here -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/all.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/fontawesome-all.min.css">
 	<title>StartUP Technologies</title>
     <!-- link google fonts here -->
@@ -28,7 +28,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">StartUP</a>
+	      <a class="navbar-brand" href="#"><h1>StartUP</h1></a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling
@@ -41,36 +41,47 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-	<div class="jumbotron">
+	<div class="jumbotron home-jumbotron">
 	  <div class="container">
 			<div class="row">
-			  <div class="col-md-5">
-					<h2>
+				<div class="col-md-7 col-md-push-5">
+					<img src="img\construction.png" alt="" class="img-responsive">
+			  </div>
+			  <div class="col-md-5 col-md-pull-7 home-jumbotron-left color-text-white">
+					<h2 class="color-text-white">
 						Our community i currently under construction, come back soon.
 					</h2>
-					<p>
+					<p class="color-text-white">
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 						Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 						Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 					</p>
 				</div>
-				<div class="col-md-7">
-					<img src="img\construction.png" alt="" class="img-responsive">
-			  </div>
 			</div>
 	  </div>
 	</div>
 
-	<section>
-		<div class="container">
+	<section class="footer-section">
+		<div class="container footer-social">
 			<div class="row">
 				<div class="col-md-4 col-md-offset-8">
 					<h4>Follow us on social media</h4>
+					<a href="#">
+						<i class="fab fa-github"></i>
+					</a>
+					<a href="#">
+						<i class="fab fa-twitter"></i>
+					</a>
+					<a href="#">
+						<i class="fab fa-facebook-square"></i>
+					</a>
+					<a href="#">
+						<i class="fab fa-linkedin-in"></i>
+					</a>
 				</div>
-				<div></div>
-			</div>
-		</div>
+			</div> <!-- /.row -->
+		</div> <!-- /.container -->
 	</section>
 
     <!-- link all the scripts here -->
